--- a/src/app/pages/list/list.component.html
+++ b/src/app/pages/list/list.component.html
@@ -63,7 +63,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let item of data">
+        <tr *ngFor="let item of data;trackBy:refreshList">
             <td>{{item.name}}</td>
             <td>{{item.email}}</td>
             <td>{{item.city}}</td>
